--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,13 @@
+
+/*..................Universal styles.................*/
 html {
   font-family: sans-serif;
   font-size: 16px;
+ }
+
+.banner {
+  margin-top: 4rem;
+  background-color: lightgrey;
 }
 
 /* .....header position and styles for desktop....*/
@@ -12,13 +19,14 @@ header {
   height: 4rem;
   border-bottom: solid 1px grey;
   align-items: center;
+  background-color: white;
+  opacity: 0.6;  /*...for construction purposes only....*/
 }
 
 header .content {
   display: flex;
   align-items: center;
   padding: 1rem 0rem 1rem 1rem;
-
 }
 
 header .content .logo {
@@ -58,43 +66,179 @@ header .mobile {
   display: none;
 }
 
-/*....header position and styles for mobile....*/
+/*..........header position and styles for mobile..............*/
 
 @media only screen and (max-width: 760px) {
 
-  header .desktop,.logo,span {
-    display: none;
-  }
+header .desktop,.logo,span {
+  display: none;
+}
 
-  header .mobile {
-    display: flex;
-    width: 100%;
-    height: 4rem;
-  }
+header .mobile {
+  display: flex;
+  width: 100%;
+  height: 4rem;
+}
 
-   .mobile li {
-    flex:1;
- }
+.mobile li {
+  flex:1;
+}
 
- .mobile li:last-child {
-   flex:0;
-   padding-right: 1.5rem;
- }
+.mobile li:last-child {
+  flex:0;
+  padding-right: 1.5rem;
+}
 
- .mobile li:first-child {
+.mobile li:first-child {
   padding-left: 1rem;
 }
 
  header .content {
-    padding: 0rem;
-  }
+  padding: 0rem;
+}
 
- .mobile ul {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    padding: 0rem;
-    margin: 0rem;
+.mobile ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 0rem;
+  margin: 0rem;
   }
 }
+
+/*....................mainContent......................................*/
+
+@media only screen and (min-width: 760px) {
+
+.banner {
+  display: inline-flex;
+  width: 100%;
+  height: 39rem;
+}
+
+.girls {
+  display: flex;
+  background-image: url("..image/bookGirls.jpg");
+  background-size: cover;
+  margin: 1.5rem 1rem 1.5rem 1.5rem;
+
+}
+.girls img {
+  width: 100%;
+}
+
+
+.words {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 1.5rem 1.5rem 1.5rem 1rem;
+}
+
+.banner .words {
+  width: 40%;
+}
+
+.words h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  padding: 6rem 1rem 3rem 1rem;
+}
+
+.words .span {
+  font-size: 1.5rem;
+  padding: 2rem 1rem 2rem 1rem;
+  margin: 1rem 1rem 2rem 1rem;
+}
+
+.banner .words a {
+  display: flex;
+  padding: 1rem 8rem 1rem 8rem;
+  white-space: nowrap;
+}
+
+.banner a  {
+  font-size: 1.3rem;
+  text-align: center;
+  border: 1px solid black;
+  background-color: black;
+  padding: 1rem 8rem 1rem 8rem;
+  margin-left: 1rem;
+  text-decoration: none;
+  color: white;
+  margin-top: 2rem;
+}
+
+.banner a:hover {
+  background-color: red;
+ }
+
+}
+
+/*............main Content mobile...................................*/
+
+
+@media only screen and (max-width: 760px) {
+
+.girls img {
+  width: 100%;
+}
+
+.banner {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+}
+
+.girls{
+  width: 100%;
+}
+
+.banner h1, {
+  text-align: left;
+  white-space: nowrap;
+}
+
+.words h1 {
+  width: 100%;
+  font-size: 3rem;
+  font-weight: bold;
+  padding: 1.5rem 0rem 1.5rem 1rem;
+  white-space: nowrap;
+}
+
+.banner .span {
+  display: flex;
+  font-size: 1.5rem;
+  padding: 0rem  0rem 1.5rem 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.words a {
+  display: flex;
+  max-width: 30%;
+  margin-right: 4%;
+  white-space: nowrap;
+}
+
+.words a{
+  position: inherit;
+  font-size: 1.3rem;
+  text-align: center;
+  border: 1px solid black;
+  background-color: black;
+  padding: 1rem 8rem 1rem 8rem;
+  text-decoration: none;
+  color: white;
+  margin-left: 1rem;
+  white-space: nowrap;
+}
+
+.words a:hover {
+  background-color: red;
+ }
+
+}
+
+/*..............................next part.....................*/
