--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,7 @@ html {
 
 }
 
+
 /* .....header position and styles for desktop....*/
 
 header {
@@ -336,24 +337,34 @@ header .mobile {
 
 .color{
   width: 100%;
+  padding-bottom: 1.5rem;
   background-color: lightgrey;
 }
 .color h1{
   text-align: center;
   font-size: 3rem;
   font-weight: bolder;
-  padding-top: 2rem;
+  padding-top: 3rem;
   padding-bottom: 2rem;
 
+}
+.learnContainer {
+  display: inline-flex;
+  padding-left: 4.5rem;
+  padding-right: 4.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .learnbox{
   display: flex;
   flex-direction: column;
-  padding: 5px;
-  width: 22rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-bottom: -1rem;
+  width: 21.5rem;
   height: 28rem;
-
 }
+
 .image1{
   height: 50%;
   background-image: url("../images/desktops.jpg");
@@ -412,16 +423,377 @@ header .mobile {
   max-width: 100%;
 }
 .para {
-
   height: 50%;
   width: auto;
   background-color: white;
   margin-top: -1rem;
 }
-.learnContainer {
-  display: inline-flex;
-  padding-left: 4.5rem;
-  padding-right: 4.5rem;
-  flex-wrap: wrap;
-  justify-content: center;
+.para h3{
+  font-size: 1.5rem;
+  font-weight: bolder;
+  padding: 1rem 0rem 1rem 1rem;
 }
+.para h4{
+  font-size: 1.2rem;
+  font-weight: lighter;;
+  padding: 0.5rem 0rem 0.5rem 1rem;
+}
+.para p{
+  font-size: 1rem;
+  font-weight: lighter;
+  padding-left: 1rem;
+  padding-top: 1rem;
+}
+
+/*.................................video............................*/
+
+.videoContainer{
+  display: block;
+  margin-top: 232px;
+  width: 100%;
+  height: 43rem;
+
+}
+.videoContainer h1{
+  font-size: 2.5rem;
+  font-weight: bold;
+  line-height: 3rem;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.vidContainer{
+  width: 60%;
+  float: left;
+}
+
+.video{
+  max-width: 100%;
+  max-height: 100%;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.vidTxt h2{
+  font-size: 2rem;
+  font-weight: bold;
+  padding-top: 1.5rem;
+  padding-bottom: 0.5rem;
+}
+.vidTxt p{
+  font-size: 1rem;
+  padding-bottom: 2rem;
+  line-height: 1.5rem;
+ }
+
+.videoSidebar{
+  width: 40%;
+  height: 30rem;
+  margin-bottom: 1rem;
+  float: right;
+}
+.vidsideContainer{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: auto;
+}
+.vidsideContainer:first-child{
+  background-color: lightgrey;
+}
+.txt{
+
+}
+.txt h3{
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+}
+.txt p{
+  font-size: 1rem;
+  font-weight: lighter;
+  line-height: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.pictures{
+  width: 35%;
+  height: auto;
+  padding: 1rem 1rem 1rem 1rem;
+}
+.picturesvid{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/*......................footer........................*/
+
+.foot{
+  display: block;
+  width: 100%;
+  height: 100px;
+
+  margin-top: 100px;
+}
+.square{display: block;
+  width: 100%;
+  height: 100px;
+  border-top: 1px solid lightgrey;
+}
+.reserved h4{
+  display: inline-flex;
+  width: 50%;
+  padding-top: 1rem;
+  padding-left: 1.5rem;
+  font-size: 0.8rem;
+
+
+}
+.rectangle h5{
+  position: relative;
+  display: inline-flex;
+  width: 50%;
+  float: right;
+  align-content: flex-end;
+  justify-content: flex-end;
+  padding-top: 1rem;
+  padding-right: 1.5rem;
+  margin-top: -2rem;
+  font-size: 0.8rem;
+
+}
+
+/*..........wrapper.................................*/
+
+/*..................Universal style...................*/
+/*...................................................................
+@media only screen and (max-width: 480px){
+html {
+  font-family: ;
+  font-size: 16px;
+  margin-left: -10px;
+  margin-right: -10px;
+  margin-top: -10px;
+}
+.wrapper {
+  display: block;
+  position: absolute;
+  width: 480px;
+}
+.box {
+  display: none;
+}
+
+/*......................header..........................
+
+.header {
+  border-bottom: 1px solid lightgrey;
+  background-color: white;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 4rem;
+
+}
+
+.header .mobile {
+  display: flex;
+  width: 100%;
+  height: 4rem;
+    margin-right: -0.1rem;
+}
+
+.mobile li {
+  flex:1;
+  list-style: none;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+
+
+}
+
+.mobile li:last-child {
+  flex:0;
+  padding-right: 1.5rem;
+}
+
+.mobile li:first-child {
+  padding-left: 1rem;
+}
+
+.mobile ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 0rem;
+  margin: 0rem;
+}
+.mobile a{
+  padding-top: 1.1rem;
+}
+
+/*.......................banner...........................
+
+.banner {
+  display: block;
+  position: relative;
+  flex-direction: column;
+  top: 4rem;
+  background-color: lightgrey;
+  margin-bottom: 100px;
+  padding-bottom: 1rem;
+}
+
+.img img{
+  width: 100%;
+  height: auto;
+}
+
+.banner h1 {
+  text-align: left;
+  white-space: nowrap;
+  padding-top: 2rem;
+}
+
+.words h1 {
+  width: 100%;
+  font-size: 3rem;
+  font-weight: bold;
+  padding: 2rem 0rem 2rem 1rem;
+  white-space: nowrap;
+}
+
+.words p {
+  display: flex;
+  font-size: 1.5rem;
+  padding: 0rem  0rem 1.5rem 1.5rem;
+}
+
+.banner span {
+  display: flex;
+  font-size: 1.5rem;
+  padding: 0rem 0rem 2rem 0rem;
+  margin-bottom: 1.5rem;
+}
+
+.banner a  {
+  font-size: 1.3rem;
+  text-align: center;
+  border: 1px solid grey;
+  background-color: grey;
+  padding: 1rem 10rem 1rem 10rem;
+  margin-left: .5rem;
+  text-decoration: none;
+  color: white;
+  margin-top: 2rem;
+  align-items: center;
+  margin-left: 1.75rem;
+  margin-right: auto;
+}
+
+.banner a:hover {
+  background-color: red;
+ }
+
+ /*...................Upper mid section.....................
+
+.UppermidMobile {
+  display: block;
+  position: absolute;
+}
+
+.mobileContainer {
+  display: block;
+  width: 100%;
+}
+
+.UppermidMobile img{
+    width:91%;
+    padding-right: 1rem;
+    margin-right: 1rem;
+}
+
+.mobileContainer{
+  padding: 0rem 1rem 3rem 1rem;
+}
+
+.info {
+  padding-left: 1rem;
+}
+
+.info h3 {
+  font-size: 1.75rem;
+  font-weight: 700;
+}
+
+.info p{
+  font-size: 1.1rem;
+}
+
+.info a{
+  text-decoration: none;
+}
+
+/*.......................Lowermid section.................
+
+.Lowermid {
+  display: block;
+  position: absolute;
+  top: 2200px;
+  margin-top:2rem;
+}
+
+.Lowermid h1{
+  text-align: center;
+  font-size: 3rem;
+}
+
+.Lowermid ul{
+  width: 83%;
+  margin-right: auto;
+}
+
+.Lowermid li{
+  background-color: lightgrey;
+  margin: 1rem;
+  list-style: none;
+}
+
+.Lowermid li:last-child{
+  margin-bottom: 2rem;
+}
+
+.buttons button{
+  font-size: 1.5rem;
+  font-weight: bold;
+  width: 100%;
+  text-align: left;
+  padding: 1rem 2rem 1.5rem 1rem;
+}
+
+/*....................video thesis......................
+
+.thesis h1{
+  margin-top: 2rem;
+  padding-top: 3rem;
+  margin-bottom: 1rem;
+}
+
+.film {
+  padding-bottom: 1.5rem;
+  width: 97%;
+  align-items: center;
+  justify-content: center;
+
+}
+
+/*................footer................................
+
+.rights p{
+  text-align: left;
+  font-size: 0.8rem;
+  padding: 1rem 0rem 1rem 2rem;
+}
+
+} /*..........this is the media tag..............*/
