--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,20 +1,46 @@
 
 /*..................Universal styles.................*/
 html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+@media only screen and (max-width: 480px){
+  html{
+
+  }
+}
+
+html {
   font-family: sans-serif;
   font-size: 16px;
   margin: 0 auto;
-
- }
-
-.banner {
-  margin-top: 4rem;
-  background-color: lightgrey;
-
 }
 
 
+.banner {
+
+  background-color: lightgrey;
+  padding-top: 4rem;
+}
+.
+
+
+
 /* .....header position and styles for desktop....*/
+
+
+header {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 4rem;
+  border-bottom: solid 1px grey;
+  align-items: center;
+  background-color: white;
+  opacity: 0.6;  /*...for construction purposes only....*/
+}
 
 header {
   position: fixed;
@@ -72,12 +98,28 @@ header .mobile {
 
 /*..........header position and styles for mobile..............*/
 
-@media only screen and (min-width: 480px) {
-@media only screen and (max-width: 760px) {
 
-header .desktop,.logo,span {
+@media only screen and (max-width: 480px){
+  header {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 4rem;
+    border-bottom: solid 1px grey;
+    align-items: center;
+    background-color: white;
+    opacity: 0.6;  /*...for construction purposes only....*/
+  }
+ .desktop{
   display: none;
 }
+ .logo {
+  display: none;
+}
+ span{
+  display: none;
+}
+
 .banner{
   margin-top: 0rem;
   padding-top: 4rem;
@@ -115,19 +157,25 @@ header .mobile {
   margin: 0rem;
   }
 }
-}
+
 /*....................mainContent......................................*/
 
-@media only screen and (min-width: 760px) {
-
+.bannermobile {
+  display: none
+}
+.wordsmobile {
+  display: none;
+}
 .banner {
-  display: inline-flex;
+  display: flex;
   width: 100%;
   height: 45rem;
 
 }
 .girlsContainer{    /*.....checking.....*/
   width: 60%;
+  height: auto;
+  margin-bottom: 1rem;
 
 
 }
@@ -137,31 +185,46 @@ header .mobile {
 /*  overflow-x: hidden; ..*/
 /*  width: auto;...*/
 }
+
 .girls {
-  width: auto;
+  width: 100%;
   height: 95.5%;
 
   margin-right: 1.5rem;
   margin-left: 1.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 
  background-image: url("../images/bookGirls.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
-}
-/*.girls {
+}...*/
+/*...girls {
   display: flex;
   background-image: url("..image/bookGirls.jpg");
   background-size: cover;
   margin: 1.5rem 1rem 1.5rem 1.5rem;
 
-}  .....*/
-.girls img {
-  width: 100%;
-  height: 100%;
+}  ...*/
+
+
+.desk{
+  max-width: 100%;
+  max-height: 100%;
+
 
 }
+.girls {
+  width: 100%;
+  height: 100%;
+  opacity:0.5;
+  overflow: hidden;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+
+
+}
+
 
 
 .words {
@@ -213,9 +276,336 @@ header .mobile {
   background-color: red;
  }
 
+ /*...mobile ..........*/
+
+@media only screen and (max-width: 480px){
+  .banner {
+    display: none;
+  }
+  .words {
+    display: none;
+  }
+  .girls {
+    display: none;
+  }
+
+  .bannermobile {
+    display: block;
+    position: relative;
+    flex-direction: column;
+    top: 4rem;
+    background-color: lightgrey;
+    margin-bottom: 100px;
+    padding-bottom: 1rem;
+  }
+
+  .imgmobile {
+    width: 100%;
+    height: 0%;
+    height: auto;  /*....check....*/
+    opacity:0.2;
+  }
+  .mob {
+    max-width: 100%;
+    max-width: 100%;
+  }
+
+  .bannermobile h1 {
+    text-align: left;
+    white-space: nowrap;
+    padding-top: 2rem;
+  }
+.mobilewords{
+  background-color: lightgrey;
+
+}
+.mobilewords .mobH1 {
+    width: 100%;
+    font-size: 3rem;
+    font-weight: bold;
+    padding: 2rem 0rem 2rem 1rem;
+    white-space: nowrap;
+  }
+
+.mobilewords .mobP {
+    display: flex;
+    font-size: 1.5rem;
+    padding: 0rem  0rem 1.5rem 1.5rem;
+  }
+
+  .bannermobile .mobSpan {
+    display: flex;
+    font-size: 1.5rem;
+    padding: 0rem 0rem 2rem 0rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .bannermobile a  {
+    font-size: 1.3rem;
+    text-align: center;
+    border: 1px solid grey;
+    background-color: grey;
+    padding: 1rem 10rem 1rem 10rem;
+    margin-left: .5rem;
+    text-decoration: none;
+    color: white;
+    margin-top: 2rem;
+    align-items: center;
+    margin-left: 1.75rem;
+    margin-right: auto;
+    white-space: nowrap;
+  }
+.bannermobile a:hover {
+  background-color: red;
+}
+.UppermidContainer{
+  display: none;
+}
+.Uppermiddesktop{
+  display: none;
+}
+.Uppermiddesktop{
+  display: none;
+}
+.trouble{
+  display: none;
+}
+.troubleimage{
+  display: none;
+}
+.Uppermidside{
+  display: none;
+  border-left: 1px solid lightgrey;
+}
+ .container{
+   display: none;
+ }
+ .writting{
+   display: none;
+ }
+ .text{
+   display: none;
+ }
+ .img{
+   display: none;
+ }
+ #grey{
+   display: none;
+ }
+ .learning{
+   display: none;
+ }
+ .color{
+   display: none;
+ }
+ .learnContainer{
+   display: none;
+ }
+ .learnbox{
+   display: none;
+ }
+ .image1{
+   display: none;
+ }
+ .para{
+   display: none;
+ }
+.image2{
+  display: none;
+}
+.image3{
+  display: none;
+}
+.image4{
+  display: none;
+}
+.image5{
+  display: none;
+}
+.image6{
+  display: none;
+}
+.videoContainer{
+  display: none;
+}
+.vidContainer{
+  display: none;
+}
+.video{
+  display: none;
+}
+.vidTxt{
+  display: none;
+}
+.videoSidebar{
+  display: none;
+}
+.vidsideContainer{
+  display: none;
+}
+.pictures{
+  display: none;
+}
+.txt{
+  display: none;
+}
+.foot{
+  display: none;
+}
+.square{
+  display: none;
+}
+.reserved{
+  display: none;
+}
+.rectangle{
+  display: none;
+}
+.videoContainer h1{
+  display: none;
+}
+
+ /*.....................Uppermid mobile section...........*/
+
+ .UppermidMobile {
+  display: block;
+  position: relative;
+  bottom: 42rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobileContainer {
+  display: block;
+  width: 100%;
+}
+
+.UppermidMobile img{
+    width:100%;
+  /*  padding-right: 1rem;
+    margin-right: 1rem;...*/
+}
+
+.mobileContainer{
+  padding: 0rem 1rem 3rem 1rem;
+}
+
+.info {
+  padding-left: 1rem;
+}
+
+.info .mobileH3{
+  font-size: 1.75rem;
+  font-weight: 700;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.info p{
+  font-size: 1.1rem;
+  padding-bottom: 1rem;
+}
+
+ .at{
+  text-decoration: none;
+  margin-top: 2rem;
+}
+
+/*................Lowermid mobile section......................*/
+
+.Lowermid {
+  display: block;
+  position: absolute;
+/*  top: 2200px;*/
+  top: 130rem;
+  margin-top:2rem;
+}
+
+.Lowermid h1{
+  text-align: center;
+  font-size: 3rem;
+}
+
+.Lowermid ul{
+  width: 100%;
+  margin-right: auto;
+}
+
+.Lowermid li{
+  background-color: lightgrey;
+  margin: 1rem;
+  list-style: none;
+}
+
+.Lowermid li:last-child{
+  margin-bottom: 2rem;
+}
+
+.buttons button{
+  font-size: 1.5rem;
+  font-weight: bold;
+  width: 100%;
+  text-align: left;
+  padding: 1rem 2rem 1.5rem 1rem;
+}
+
+/*....................video thesis......................*/
+
+.thesis h1{
+  margin-top: 2rem;
+  padding-top: 3rem;
+  margin-bottom: 1rem;
+}
+
+.film {
+  padding-bottom: 1.5rem;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding-left: 1rem;
+
+}
+
+/*................footer................................*/
+
+.rights p{
+  text-align: left;
+  font-size: 0.8rem;
+  padding: 1rem 0rem 1rem 2rem;
+  bottom: -150rem;
 }
 
 
+} /*....media tag ........*/ /*...very important...*/
+
+
+@media only screen and (min-width: 760px){
+  .UppermidMobile img{
+    display: none;
+  }
+  .UppermidMobile{
+    display: none;
+  }
+.mobileContainer{
+  display: none;
+}
+.imgmob{
+  display: none;
+}
+.info{
+  display: none;
+}
+.mobileH3{
+  display: none;
+}
+.mobileP{
+  display: none;
+}
+.Lowermid{
+  display: none;
+}
+
+} /*....very important media tag....*/
 /*..................Uppermid section  desktop version.....................*/
 
 
@@ -331,7 +721,7 @@ header .mobile {
   width: 100%;
   height: 49rem;
   padding-top: 0rem;
-  margin-top: 44rem;
+  margin-top: 2rem;
 
 }
 
@@ -449,7 +839,7 @@ header .mobile {
 
 .videoContainer{
   display: block;
-  margin-top: 232px;
+  margin-top: 14.5rem;  /*...px....232...*/
   width: 100%;
   height: 43rem;
 
@@ -533,11 +923,11 @@ header .mobile {
   width: 100%;
   height: 100px;
 
-  margin-top: 100px;
+  margin-top: 6.25rem;  /*...100px...*/
 }
 .square{display: block;
   width: 100%;
-  height: 100px;
+  height: 6.25rem;  /*...100px..*/
   border-top: 1px solid lightgrey;
 }
 .reserved h4{
@@ -562,238 +952,3 @@ header .mobile {
   font-size: 0.8rem;
 
 }
-
-/*..........wrapper.................................*/
-
-/*..................Universal style...................*/
-/*...................................................................
-@media only screen and (max-width: 480px){
-html {
-  font-family: ;
-  font-size: 16px;
-  margin-left: -10px;
-  margin-right: -10px;
-  margin-top: -10px;
-}
-.wrapper {
-  display: block;
-  position: absolute;
-  width: 480px;
-}
-.box {
-  display: none;
-}
-
-/*......................header..........................
-
-.header {
-  border-bottom: 1px solid lightgrey;
-  background-color: white;
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  height: 4rem;
-
-}
-
-.header .mobile {
-  display: flex;
-  width: 100%;
-  height: 4rem;
-    margin-right: -0.1rem;
-}
-
-.mobile li {
-  flex:1;
-  list-style: none;
-  padding-top: 1rem;
-  padding-bottom: 0.5rem;
-
-
-}
-
-.mobile li:last-child {
-  flex:0;
-  padding-right: 1.5rem;
-}
-
-.mobile li:first-child {
-  padding-left: 1rem;
-}
-
-.mobile ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  padding: 0rem;
-  margin: 0rem;
-}
-.mobile a{
-  padding-top: 1.1rem;
-}
-
-/*.......................banner...........................
-
-.banner {
-  display: block;
-  position: relative;
-  flex-direction: column;
-  top: 4rem;
-  background-color: lightgrey;
-  margin-bottom: 100px;
-  padding-bottom: 1rem;
-}
-
-.img img{
-  width: 100%;
-  height: auto;
-}
-
-.banner h1 {
-  text-align: left;
-  white-space: nowrap;
-  padding-top: 2rem;
-}
-
-.words h1 {
-  width: 100%;
-  font-size: 3rem;
-  font-weight: bold;
-  padding: 2rem 0rem 2rem 1rem;
-  white-space: nowrap;
-}
-
-.words p {
-  display: flex;
-  font-size: 1.5rem;
-  padding: 0rem  0rem 1.5rem 1.5rem;
-}
-
-.banner span {
-  display: flex;
-  font-size: 1.5rem;
-  padding: 0rem 0rem 2rem 0rem;
-  margin-bottom: 1.5rem;
-}
-
-.banner a  {
-  font-size: 1.3rem;
-  text-align: center;
-  border: 1px solid grey;
-  background-color: grey;
-  padding: 1rem 10rem 1rem 10rem;
-  margin-left: .5rem;
-  text-decoration: none;
-  color: white;
-  margin-top: 2rem;
-  align-items: center;
-  margin-left: 1.75rem;
-  margin-right: auto;
-}
-
-.banner a:hover {
-  background-color: red;
- }
-
- /*...................Upper mid section.....................
-
-.UppermidMobile {
-  display: block;
-  position: absolute;
-}
-
-.mobileContainer {
-  display: block;
-  width: 100%;
-}
-
-.UppermidMobile img{
-    width:91%;
-    padding-right: 1rem;
-    margin-right: 1rem;
-}
-
-.mobileContainer{
-  padding: 0rem 1rem 3rem 1rem;
-}
-
-.info {
-  padding-left: 1rem;
-}
-
-.info h3 {
-  font-size: 1.75rem;
-  font-weight: 700;
-}
-
-.info p{
-  font-size: 1.1rem;
-}
-
-.info a{
-  text-decoration: none;
-}
-
-/*.......................Lowermid section.................
-
-.Lowermid {
-  display: block;
-  position: absolute;
-  top: 2200px;
-  margin-top:2rem;
-}
-
-.Lowermid h1{
-  text-align: center;
-  font-size: 3rem;
-}
-
-.Lowermid ul{
-  width: 83%;
-  margin-right: auto;
-}
-
-.Lowermid li{
-  background-color: lightgrey;
-  margin: 1rem;
-  list-style: none;
-}
-
-.Lowermid li:last-child{
-  margin-bottom: 2rem;
-}
-
-.buttons button{
-  font-size: 1.5rem;
-  font-weight: bold;
-  width: 100%;
-  text-align: left;
-  padding: 1rem 2rem 1.5rem 1rem;
-}
-
-/*....................video thesis......................
-
-.thesis h1{
-  margin-top: 2rem;
-  padding-top: 3rem;
-  margin-bottom: 1rem;
-}
-
-.film {
-  padding-bottom: 1.5rem;
-  width: 97%;
-  align-items: center;
-  justify-content: center;
-
-}
-
-/*................footer................................
-
-.rights p{
-  text-align: left;
-  font-size: 0.8rem;
-  padding: 1rem 0rem 1rem 2rem;
-}
-
-} /*..........this is the media tag..............*/
